# aegisvault

./: .gitignore  AegisJSON.format  Cargo.toml  README.md  decrypt.py  flake.nix  showdb.py
.cargo/: config.toml
.github/workflows/: ci.yml  merge.yml
src/: aegis.rs  algorithm.rs  lib.rs  main.rs  vault.rs
