[package]
name = "aegisvault"
version = "0.3.68"
edition = "2024"
authors = ["github.com/pepa65 <pepa65@passchier.net>"]
description = "Convert otpauth URI file to Encrypted Aegis vault JSON on stdout"
repository = "https://github.com/pepa65/aegisvault"
documentation = "https://docs.rs/aegisvault"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["cli", "otpauth", "json", "aegis"]
categories = ["command-line-utilities", "encoding"]

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/{name}"
pkg-fmt = "bin"
disabled-strategies = ["quick-install", "compile"]
target = "x86_64-unknown-linux-musl"
target-family = "Linux"
target-arch = "X86_64"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.95"
data-encoding = "2.6.0"
hex = {version = "0.4.3", features = ["serde"]}
scrypt = {version = "0.11.0", default-features = false}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
uuid = {version = "1.11.1", features = ["v4"]}
rand = "0.9.1"
ring = "0.17.14"
zeroize = {version = "1.8.1", features = ["zeroize_derive"]}
urlencoding = "2.1.3"
url = "2.5.4"
rpassword = "7.3.1"
clap = { version = "4.5.26", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
inherent_to_string = "allow"
to_string_trait_impl = "allow"
